# waffle-iron

./: Cargo.toml  README.md
src/: bitsets.rs  candidates.rs  format.rs  generator.rs  indices.rs  lib.rs  random.rs  solver.rs  sudoku.rs  values.rs  wasm.rs
